# lottery_tickets

./: .gitignore  .gitmodules  CNAME  LICENSE  README.md  index.html  pyproject.toml
extra/noise_opt_rm/: README.md  __init__.py
extra/noise_opt_rm/cluster/: cluster_initial_obs.py  cluster_policy.py  visualize_initial_obs.py
extra/noise_opt_rm/eval/: budget_opt_noise.py  budget_zo_opt.py  cluster_noise.py  dppo_base_eval.py  eval_utils.py  opt_dsrl.py  opt_gauss_noise.py  opt_noise.py  perturb.py  subtask_lt.py
extra/noise_opt_rm/results/lottery_ticket_results/can/envs100_samples100_seed999_ddim8_20251130_223256_nsamples_100/: noise_samples.npy  summary.json
extra/noise_opt_rm/results/lottery_ticket_results/can/envs100_samples5000_seed999_20251122_233346_ddim8/: noise_samples.npy  summary.json
extra/noise_opt_rm/results/lottery_ticket_results/can/envs100_samples5000_seed999_20251127_043633_ddim2/: summary.json
extra/noise_opt_rm/results/lottery_ticket_results/can/envs10_samples5000_seed999_ddim8_20251130_223053_nenvs_10/: noise_samples.npy
extra/noise_opt_rm/results/lottery_ticket_results/can/envs50_samples5000_seed999_ddim8_20251130_223116_nenvs_50/: summary.json
extra/noise_opt_rm/results/lottery_ticket_results/lift/envs100_samples100_seed999_ddim8_20251130_223312_nsamples_100/: noise_samples.npy  summary.json
extra/noise_opt_rm/results/lottery_ticket_results/lift/envs10_samples5000_seed999_ddim8_20251130_223107_nenvs_10/: noise_samples.npy  summary.json
extra/noise_opt_rm/ticket_search/diffusion/: action_mse_error.py  approx_error.py  gte_error.py  loss_utils.py  plot_all_steps.py  plot_utils.py  record_episodes.py
extra/noise_opt_rm/ticket_search/rollout/: lottery_ticket.py  st1_ticket.py  st2_ticket.py  visualize_noise_samples.py  zo_opt.py
extra/noise_opt_rm/ticket_search/rollout/budget/: lt.py  st1.py
extra/noise_opt_rm/train/: dsrl.py  ppo.py  qrdqn.py
extra/noise_opt_rm/train/train_utils/: ppo_callbacks.py  qrdqn_callbacks.py  utils.py
extra/noise_opt_rm/utils/: env_utils.py  fit_gaussian.py  plot_regression_to_mean.py  plot_regression_to_mean_rewards.py  ticket_intersection.py
extra/robomimic/: dsrl_can.yaml  dsrl_lift.yaml  dsrl_square.yaml  dsrl_transport.yaml
extra/robomimic/diffusion_loss/: can_pre_diffusion_mlp.yaml  lift_pre_diffusion_mlp.yaml  square_pre_diffusion_mlp.yaml  transport_pre_diffusion_mlp.yaml
extra/robomimic/qrdqn/: transport.yaml
extra/robomimic/toy/: eval_1d_diffusion_mlp.yaml  eval_2d_diffusion_mlp.yaml
scripts/: create_overplay.py  lt_eval_goal.sh  lt_eval_obj.sh  lt_eval_object.sh  lt_eval_spatial.sh  pareto_plot.py  plot_budget_res.py  plot_ddim_comparison.py  plot_lt.py  submit_goal_tickets.sh  submit_object_tickets.sh  submit_spatial_tickets.sh  summarize_ticket_results.py
src/dsrl_smolvla_libero/: config_dsrl_libero.py  dsrl_utils.py  env_utils.py  feature_extractors.py  train_dsrl.py
src/lottery_tickets/envs/franka_sim/: MANIFEST.in  README.md  pyproject.toml
src/lottery_tickets/envs/franka_sim/franka_sim/envs/: panda_pick_gym_env.py  panda_pick_gym_env_jaxish.py
src/lottery_tickets/envs/franka_sim/franka_sim/jaxish/: __init__.py
src/lottery_tickets/envs/franka_sim/franka_sim/jaxish/controllers/: __init__.py
src/lottery_tickets/envs/franka_sim/franka_sim/jaxish/envs/: __init__.py  panda_pick_gym_env.py  panda_pick_sparse_gym_env.py
src/lottery_tickets/envs/franka_sim/franka_sim/jaxish/test/: test_gym_env_human.py  test_gym_env_render.py  test_robosuite_env_human.py
src/lottery_tickets/envs/franka_sim/franka_sim/test/: test_gym_env_render.py
src/lottery_tickets/franka_sim/: README.md
src/lottery_tickets/franka_sim/franka_sim/envs/: panda_pick_sparse_gym_env.py
src/lottery_tickets/franka_sim_lt/: README.md  generate_data.py  gym_utils.py  mg_frankasim.py  models.py  models_utils.py
src/lottery_tickets/franka_sim_lt/cfgs/: mg_demos.yaml
src/lottery_tickets/franka_sim_lt/franka_sim/: README.md  TODO  pyproject.toml
src/lottery_tickets/franka_sim_lt/franka_sim/franka_sim/: __init__.py  mujoco_gym_env.py  utils.py
src/lottery_tickets/franka_sim_lt/franka_sim/franka_sim/controllers/: __init__.py  opspace.py
src/lottery_tickets/franka_sim_lt/franka_sim/franka_sim/envs/: __init__.py  panda_pick_gym_env.py  panda_pick_sparse_gym_env.py  panda_reach_ctrlr_gym_env.py  panda_reach_gym_env.py  utils.py
src/lottery_tickets/franka_sim_lt/generate_data/: generate_data.py
src/lottery_tickets/franka_sim_lt/generate_data/cfgs/: mg_demos.yaml
src/lottery_tickets/franka_sim_lt/tests/: test_env.py
src/lottery_tickets/franka_sim_lt/train_model/: .gitignore  README.md  evaluate.py  generate_tickets.sh  plot_epsilon_results.py  run_epsilon_experiments.py  train.py  variance_check.py  viz_regression_to_mean.py
src/lottery_tickets/franka_sim_lt/train_model/cfgs/: ddim.yaml  fm.yaml
src/lottery_tickets/franka_sim_lt/wrappers/: chunking.py  obs.py  video_recording.py
src/lottery_tickets/robomimic_dppo_lt/: .gitignore  README.md  dppo_base_eval.py  env_util.py  eval_utils.py  lottery_ticket.py  opt_noise.py  plot_epsilon_results.py  plot_epsilon_search_results.py  policy_util.py  run_epsilon_experiments.py
src/lottery_tickets/robomimic_dppo_lt/cfg/robomimic/: dsrl_can.yaml  dsrl_lift.yaml  dsrl_square.yaml  dsrl_transport.yaml
src/lottery_tickets/robomimic_dppo_lt/envs100_samples5000_seed999_ddim8_20251130_221846_ddim8/: config.yaml  noise_samples.npy
src/lottery_tickets/smolvla_libero/: .gitignore  README.md  evaluate.py  generate_tickets.sh  lt_search_instance_batch.py  plot_epsilon_results.py  print_eval_results.py  run_epsilon_experiments.py
(+3547 files in other folders)
