[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "lottery_tickets"
version = "0.1.0"
description = "The Lottery Ticket Hypothesis for Improving Pretrained Robot Diffusion and Flow Policies"
readme = "README.md"
authors = [
  { name="Eric Rosen", email="erosen@theaiinstitute.com" }
]
requires-python = ">=3.10"
dependencies = [
]

[project.optional-dependencies]
franka-sim = [
  "franka-sim",
  "torch",
  "opencv-python",  # headless
  "h5py",
  "hydra-core",
  "matplotlib"
]

dppo-robomimic = [
  "stable-baselines3 @ git+https://github.com/ajwagen/stable-baselines3-dsrl.git@10e5d311b5c42fe571ff3eeb72f622ca616a149d",
  "moviepy"
]

smolvla-libero = [
  "lerobot[smolvla,libero] @ git+https://github.com/huggingface/lerobot.git@56b43cc88844cab4f231cf370a6c8eb8103bc9b8",
]

[tool.uv.sources]
franka-sim = { workspace = true }

[tool.uv.workspace]
members = ["src/lottery_tickets/franka_sim_lt/franka_sim"]
exclude = []
