[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "lottery_tickets"
version = "0.1.0"
description = "The Lottery Ticket Hypothesis for Improving Pretrained Robot Diffusion and Flow Policies"
readme = "README.md"
authors = [{ name = "Eric Rosen", email = "erosen@theaiinstitute.com" }]
requires-python = ">=3.10"
dependencies = ["tyro>=1.0.3"]

[project.optional-dependencies]
franka-sim = [
  "franka-sim",               # no versioning, this is in the repo
  "torch==2.7.1",
  "opencv-python==4.11.0.86", # headless
  "h5py==3.15.1",
  "hydra-core==1.3.2",
  "matplotlib==3.10.8",
]

dppo-robomimic = [
  "stable-baselines3 @ git+https://github.com/ajwagen/stable-baselines3-dsrl.git@10e5d311b5c42fe571ff3eeb72f622ca616a149d",
  "moviepy==2.1.2",
  "dppo[gym,robomimic]",
  "numba>=0.54.1"
]

smolvla-libero = [
  "egl_probe",
  "hf_egl_probe",
  "lerobot[smolvla,libero] @ git+https://github.com/huggingface/lerobot.git@56b43cc88844cab4f231cf370a6c8eb8103bc9b8",
  "numba>=0.54.1"
]

[tool.uv.sources]
franka-sim = { workspace = true }
dppo = {path = "src/lottery_tickets/robomimic_dppo_lt/dppo"}

[tool.uv.workspace]
members = ["src/lottery_tickets/franka_sim_lt/franka_sim"]
exclude = []

[tool.uv]
conflicts = [
  [
    { extra = "franka-sim" },
    { extra = "dppo-robomimic" },
    { extra = "smolvla-libero" },
  ],
]
no-build-isolation-package = ["egl_probe", "hf_egl_probe"]

[tool.uv.extra-build-variables]
egl_probe = { CMAKE_POLICY_VERSION_MINIMUM = "3.5" }
