[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "franka_sim"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.8"

authors = [
    { name = "Thomas Weng", email = "tweng@rai-inst.com" },
    { name = "Ondrej Biza", email = "obiza@rai-inst.com" }
]

dependencies = [
    "dm_env",
    "numpy>=1.23.0",
    "PyOpenGL==3.1.4",
    "PyOpenGL_accelerate==3.1.9",
    "mujoco>=3.3.0", # Can be 2.x.x, but 3.x.x is preferred.
    "gymnasium>=1.0.0",  # Can be 0.x.x, but 1.x.x is preferred.
    "dm-robotics-transformations",
    "imageio[ffmpeg]",
    "lxml",
    "packaging",
]

# [project.optional-dependencies]
# ci = [
#     "pyrender", # for mujoco osmesa
# ]
